@@ -336,8 +336,8 @@ gpointer gtk_object_get_data_by_id  (GtkObject	     *object,
 				     guint	      data_id);
 void  gtk_object_remove_data_by_id  (GtkObject	     *object,
 				     guint	      data_id);
-guint gtk_object_data_try_key	    (const gchar     *key);
-guint gtk_object_data_force_id	    (const gchar     *key);
+#define	gtk_object_data_try_key	    g_dataset_try_key
+#define	gtk_object_data_force_id    g_dataset_force_id
 
 /* Set the "user_data" object data field of "object". It should
  *  be noted that this is no different than calling 'gtk_object_set_data'
